--- a/cleaning.html
+++ b/cleaning.html
@@ -99,7 +99,7 @@
               As a family-owned independent business, we understand the importance of spending quality time together. That's why we're passionate about providing reliable home cleaning services that will free up your time and let you focus on what really matters.
             </p>
             <p>
-              we care deeply about our customers, their homes, and their families. We take great pride in going above and beyond to ensure that our customers' needs are always met. Our cleaning teams have been trained to our exacting standards of cleanliness, so you can rest assured that your home or business will receive the highest quality of service possible.
+              We care deeply about our customers, their homes, and their families. We take great pride in going above and beyond to ensure that our customers' needs are always met. Our cleaning teams have been trained to our exacting standards of cleanliness, so you can rest assured that your home or business will receive the highest quality of service possible.
             </p>
           </div>
           <div class="col-lg-6">
@@ -117,7 +117,7 @@
                 <li><i class="bi bi-check-circle-fill"></i> Reduce the risk of accidents and injuries</li>
               </ul>
               <p>
-                We deliver a non-disruptive but highly effective deep cleaning service to many organizations, including offices, call centers, golf clubs, medical centers, and much more. All premises can be cleaned to your individual wishes and requirements.
+                We deliver a non-disruptive but highly effective deep cleaning service to many organisations, including offices, call centers, golf clubs, medical centers, and much more. All premises can be cleaned to your individual wishes and requirements.
               </p>
 
               <div class="position-relative mt-4">
@@ -178,73 +178,73 @@
             <div class="col-lg-3 col-md-4">
               <div class="icon-box">
                 <i class="fa-solid fa-house-user" style="color: #ffbb2c;"></i>
-                <h3><a href="">Domestic Cleaning</a></h3>
+                <h3>Domestic Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box">
                 <i class="fa-solid fa-people-roof" style="color: #5578ff;"></i>
-                <h3><a href="">Venue Cleaning</a></h3>
+                <h3>Venue Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box">
                 <i class="fa-solid fa-key" style="color: #e80368;"></i>
-                <h3><a href="">End Of Tenancy Cleans</a></h3>
+                <h3>End Of Tenancy Cleans</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
               <div class="icon-box">
                 <i class="fa-solid fa-hands-bubbles" style="color: #e361ff;"></i>
-                <h3><a href="">Extreme Deep Clean</a></h3>
+                <h3>Extreme Deep Clean</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-graduation-cap" style="color: #47aeff;"></i>
-                <h3><a href="">Student Block Cleaning</a></h3>
+                <h3>Student Block Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-bed" style="color: #ffa76e;"></i>
-                <h3><a href="">Air BnB's / Holiday Lets</a></h3>
+                <h3>Air BnB's / Holiday Lets</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-regular fa-building" style="color: #11dbcf;"></i>
-                <h3><a href="">Office Cleaning</a></h3>
+                <h3>Office Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-shop" style="color: #4233ff;"></i>
-                <h3><a href="">Commercial Cleaning</a></h3>
+                <h3>Commercial Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-kitchen-set" style="color: #b2904f;"></i>
-                <h3><a href="">Oven Cleaning</a></h3>
+                <h3>Oven Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-rug" style="color: #b20969;"></i>
-                <h3><a href="">Carpet Cleaning</a></h3>
+                <h3>Carpet Cleaning</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-house-flag" style="color: #ff5828;"></i>
-                <h3><a href="">New Development Cleans</a></h3>
+                <h3>New Development Cleans</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="fa-solid fa-hammer" style="color: #29cc61;"></i>
-                <h3><a href="">Construction cleaning</a></h3>
+                <h3>Construction cleaning</h3>
               </div>
             </div>
           </div>
