--- a/maintenance.html
+++ b/maintenance.html
@@ -180,73 +180,73 @@
                     <div class="col-lg-3 col-md-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-brush" style="color: #ffbb2c;"></i>
-                        <h3><a href="">Painting / Decorating</a></h3>
+                        <h3>Painting / Decorating</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                       <div class="icon-box">
                         <i class="fa-solid fa-screwdriver-wrench" style="color: #5578ff;"></i>
-                        <h3><a href="">Handyman Repairs</a></h3>
+                        <h3>Handyman Repairs</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                       <div class="icon-box">
                         <i class="fa-solid fa-screwdriver" style="color: #e80368;"></i>
-                        <h3><a href="">Carpentry</a></h3>
+                        <h3>Carpentry</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                       <div class="icon-box">
                         <i class="fa-solid fa-wrench" style="color: #e361ff;"></i>
-                        <h3><a href="">Kitchen Fitting</a></h3>
+                        <h3>Kitchen Fitting</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-faucet-drip" style="color: #47aeff;"></i>
-                        <h3><a href="">Plumbing</a></h3>
+                        <h3>Plumbing</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-house-chimney-window" style="color: #ffa76e;"></i>
-                        <h3><a href="">Window Cleaning</a></h3>
+                        <h3>Window Cleaning</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-brands fa-pagelines" style="color: #11dbcf;"></i>
-                        <h3><a href="">Gardening</a></h3>
+                        <h3>Gardening</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-plug" style="color: #4233ff;"></i>
-                        <h3><a href="">Electrical </a></h3>
+                        <h3>Electrical</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-hammer" style="color: #b2904f;"></i>
-                        <h3><a href="">Flooring </a></h3>
+                        <h3>Flooring</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-house" style="color: #b20969;"></i>
-                        <h3><a href="">Property Turnover</a></h3>
+                        <h3>Property Turnover</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-trash-can" style="color: #ff5828;"></i>
-                        <h3><a href="">Waste Removal</a></h3>
+                        <h3>Waste Removal</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-seedling" style="color: #29cc61;"></i>
-                        <h3><a href="">Lawn Care</a></h3>
+                        <h3>Lawn Care</h3>
                       </div>
                     </div>
                   </div>
