--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               <div class="member" data-aos="fade-up">
                 <div class="pic"><img src="assets/img/optimodirectors.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Cristina Grilo-Stoica & Florin Stoica</h4>
+                  <h4>Florin Stoica & Cristina Grilo-Stoica</h4>
                   <span>Directors</span>
                 </div>
               </div>
@@ -338,7 +338,7 @@
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>02921324815</p>
+                  <p>02921324815<br>07726244510</p>
                 </div>
   
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1494.2553502066678!2d-3.1786634845787125!3d51.49081365488551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e1cbdcef262b5%3A0xfca8fdb3a2b15fe3!2s95%20Wyeverne%20Rd%2C%20Cardiff%20CF24%204BG!5e0!3m2!1sen!2suk!4v1677536837783!5m2!1sen!2suk" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen=""></iframe>
