team 3 on md counts image restriction

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="hero-content">
           <h1><span class="typed" data-typed-items="Cleaning, Maintenance, Next Level Solutions!"></span><span class="typed-cursor typed-curser--blink" aria-hidden="true"></span></h1>
-          <p>Cleaning, Maintenance, Next Level Solutions!</p>
+          <p>Optimo, Next Level Solutions!</p>
 
         </div>
       </div>
@@ -266,7 +266,7 @@
   
           <div class="row">
   
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up">
                 <div class="pic"><img src="assets/img/optimodirectors.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -276,7 +276,7 @@
               </div>
             </div>
   
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up" data-aos-delay="150">
                 <div class="pic"><img src="assets/img/andreia.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -286,7 +286,7 @@
               </div>
             </div>
   
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="pic"><img src="assets/img/optimocarina.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -303,6 +303,9 @@
       <!-- End Team Section -->
   <!-- ======= Video Testimonial Section ======= -->
   <section id="call-to-action" class="call-to-action">
+    <div class="section-title" data-aos="fade-in" data-aos-delay="100">
+      <h2>Testimonials</h2>
+    </div>
     <div class="container text-center" data-aos="zoom-out">
       <a href="https://www.youtube.com/watch?v=EzWfBrsAvOk&t=116s" class="glightbox play-btn"></a>
       <h3>Hear what our customers have to say</h3>
