--- a/cleaning.html
+++ b/cleaning.html
@@ -84,14 +84,14 @@
     <main id="main">
       <!-- ======= About Us Section ======= -->
     <section id="c-about" class="c-about">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-title">
           <h2>Cleaning</h2>
           <p>We believe that efficiency in our cleaning methods will always ensure that we provide a timely, high end quality standard of finish to your home or workplace.</p>
         </div>
 
-        <div class="row gy-4">
+        <div class="row gy-4" data-aos="fade-up">
           <div class="col-lg-6">
             <h3>Transform Your Home and Business with Optimo's Cleaning Services</h3>
             <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="">
