--- a/maintenance.html
+++ b/maintenance.html
@@ -84,14 +84,14 @@
     <main id="main">
          <!-- ======= About Us Section ======= -->
     <section id="c-about" class="c-about">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-title">
           <h2>Maintenance</h2>
           <p>Looking for reliable and affordable maintenance services? Our company has a team of experts ready to keep your property in pristine condition all year round.</p>
         </div>
 
-        <div class="row gy-4">
+        <div class="row gy-4" data-aos="fade-up">
           <div class="col-lg-6">
             <h3>Let Optimo take care of your maintenance needs</h3>
             <p>
