--- a/cleaning.html
+++ b/cleaning.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPTIMO</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-      
+    <title>Optimo - Cleaning and Maintenance Next Level Solutions in Cardiff</title>
+    <meta name="description" content="Optimo is a reliable and professional cleaning and maintenance company based in Cardiff, South Wales. We offer a range of commercial and domestic cleaning services as well as property maintenance. Our experienced team is dedicated to providing high-quality and affordable cleaning & maintenance solutions to meet your needs. Contact us today to schedule a free consultation.">
+    <meta name="keywords" content="Cleaning services, Cardiff, Wales, Domestic Cleaning, Venue Cleaning, End Of Tenancy Cleans, Deep Clean, Student Block Cleaning, Air BnB's cleaning, Holiday Let cleaning, Commercial Cleaning, Construction cleaning">
+    <meta name="robots" content="index,follow">
+    <meta name="DC.title" content="Cleaning and Maintenance Services in Cardiff - Optimo">
+    <meta name="google-site-verification" content="...">
     <!-- Favicons -->
     <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
