image alt tags completed

--- a/cleaning.html
+++ b/cleaning.html
@@ -48,7 +48,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex align-items-center">
-        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="" class="img-fluid">OPTIMO</a>
+        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="Optimo logo" class="img-fluid">OPTIMO</a>
   
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -96,7 +96,7 @@
         <div class="row gy-4" data-aos="fade-up">
           <div class="col-lg-6">
             <h3>Transform Your Home and Business with Optimo's Cleaning Services</h3>
-            <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="Optimo Cleaning team photo">
             <p>
               As a family-owned independent business, we understand the importance of spending quality time together. That's why we're passionate about providing reliable home cleaning services that will free up your time and let you focus on what really matters.
             </p>
@@ -123,7 +123,7 @@
               </p>
 
               <div class="position-relative mt-4">
-                <img src="assets/img/optimocleaning.jpg" class="img-fluid rounded-4" alt="">
+                <img src="assets/img/optimocleaning.jpg" class="img-fluid rounded-4" alt="Woman Cleaning hands on hips holding a spray bottle and cloth">
               </div>
             </div>
           </div>
