--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex align-items-center">
-        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="" class="img-fluid">OPTIMO</a>
+        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="Optimo logo" class="img-fluid">OPTIMO</a>
   
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -103,15 +103,15 @@
       
               <div class="clients-slider swiper swiper-initialized swiper-horizontal swiper-pointer-events" data-aos="fade-up" data-aos-delay="100">
                 <div class="swiper-wrapper align-items-center" id="swiper-wrapper-298a16a88ebf996e" aria-live="off" style="transform: translate3d(-2464px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clients2let2.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsjr.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="7 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/clientsldc.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" role="group" aria-label="8 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/clientsss.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide swiper-slide-duplicate-active" role="group" aria-label="1 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clients2let2.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="2 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsjr.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/clientsldc.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/clientsss.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="8"><img src="assets/img/clients/clientspurplebricks.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide swiper-slide-duplicate-active" role="group" aria-label="1 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt="client logo Home cloud"></div>
+                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt="Client logo Moginie James"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt="client logo Newhall Janitorial"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clients2let2.png" class="img-fluid" alt="Client logo 2 let 2"></div>
+                  <div class="swiper-slide" role="group" aria-label="2 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt="client logo Gateway 2 Coneyancing"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsjr.png" class="img-fluid" alt="Client logo Jeffrey Ross"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/clientsldc.png" class="img-fluid" alt="Client Logo Llanishen Dental Centre"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/clientsss.png" class="img-fluid" alt="Client logo Shepherd Sharpe"></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="8"><img src="assets/img/clients/clientspurplebricks.png" class="img-fluid" alt="Client logo Purple Bricks"></div>
                 <div class="swiper-slide swiper-slide-duplicate swiper-slide-active" role="group" aria-label="1 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-next" role="group" aria-label="2 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clients2let2.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsjr.png" class="img-fluid" alt=""></div></div>
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 8"></span></div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
@@ -156,7 +156,7 @@
   
           <div class="row">
             <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
-              <img src="assets/img/optimocounts.jpg" alt="" class="img-fluid">
+              <img src="assets/img/optimocounts.jpg" alt="Window cleaning" class="img-fluid">
             </div>
   
             <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="150">
@@ -270,7 +270,7 @@
   
             <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up">
-                <div class="pic"><img src="assets/img/optimodirectors.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/optimodirectors.jpg" class="img-fluid" alt="Florin Stoica & Cristina Grilo-Stoica"></div>
                 <div class="member-info">
                   <h4>Florin Stoica & Cristina Grilo-Stoica</h4>
                   <span>Directors</span>
@@ -280,7 +280,7 @@
   
             <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up" data-aos-delay="150">
-                <div class="pic"><img src="assets/img/andreia.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/andreia.jpg" class="img-fluid" alt="Andreia Attard"></div>
                 <div class="member-info">
                   <h4>Andreia Attard</h4>
                   <span>Office Manager</span>
@@ -290,7 +290,7 @@
   
             <div class="col-lg-4 col-md-4">
               <div class="member" data-aos="fade-up" data-aos-delay="300">
-                <div class="pic"><img src="assets/img/optimocarina.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/optimocarina.jpg" class="img-fluid" alt="Carina Jenkins"></div>
                 <div class="member-info">
                   <h4>Carina Jenkins</h4>
                   <span>Business Development Manager</span>
