--- a/maintenance.html
+++ b/maintenance.html
@@ -49,7 +49,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex align-items-center">
-        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="" class="img-fluid">OPTIMO</a>
+        <a href="index.html" class="logo me-auto"><img src="assets/img/logoheader.png" alt="Optimo logo" class="img-fluid">OPTIMO</a>
   
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -100,7 +100,7 @@
             <p>
               At Optimo, we understand that maintaining and repairing your property can be a time-consuming and stressful process. That's why we offer a comprehensive range of renovation and home improvement services to take care of all your property needs.
             </p>
-            <img src="assets/img/optimomaintenance.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/optimomaintenance.jpg" class="img-fluid rounded-4 mb-4" alt="Maintenance man smiling at work on ladder in a kitchen">
             <p>
               Our team of experienced and qualified tradespeople take pride in their work, and we're committed to providing high-quality services that meet your unique needs. 
             </p>
@@ -125,7 +125,7 @@
                 Don't let the stress of property maintenance get in the way of your busy life. Contact us today to learn more about how we can help you keep your property in top condition.
               </p>
               <div class="position-relative mt-4">
-                <img src="assets/img/optimoteam2.JPG" class="img-fluid rounded-4" alt="">
+                <img src="assets/img/optimoteam2.JPG" class="img-fluid rounded-4" alt="Optimo maintenance team photo">
               </div>
             </div>
           </div>
