codepractor logo and link added to index footer

--- a/index.html
+++ b/index.html
@@ -400,7 +400,9 @@
         <div class="copyright">
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
         </div>
-        
+        <div class="webdesign">
+          <p>Website Design & Build by &nbsp; <a href="https://www.codepractor.com" target="_blank"><img src="assets/img/codepractorlogo.png" class="codepractor" alt="Codepractor Logo" style="width: 200px;"></a></p>
+        </div>
       </div>
     </footer><!-- End Footer -->
   
