--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="cleaning.html">Cleaning</a></li>
-                <li><a href="maintenance.html">Maintenance</a></li>
+                <li><a href="optimo-cleaning-cardiff.html">Cleaning</a></li>
+                <li><a href="optimo-maintenance-cardiff.html">Maintenance</a></li>
               </ul>
             </li>
             <li><a class="getstarted scrollto" href="#contact">Contact</a></li>
@@ -191,7 +191,7 @@
                   </svg>
                   <i class="fa-solid fa-hand-sparkles"></i>
                 </div>
-                <h4><a href="cleaning.html">Cleaning</a></h4>
+                <h4><a href="optimo-cleaning-cardiff.html">Cleaning</a></h4>
                 <p>Our flexible and reliable operation makes us the go-to company when it comes to cleaning. Click below to see our full range of cleaning services available</p>
               </div>
             </div>
@@ -203,7 +203,7 @@
                   </svg>
                   <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
-                <h4><a href="maintenance.html">Maintenance</a></h4>
+                <h4><a href="optimo-maintenance-cardiff.html">Maintenance</a></h4>
                 <p>We have recently extended our maintenance department and now cover a wide range of maintenance services for all your property needs</p>
               </div>
             </div>
