analytics and form update email and smtp

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDLHPM92VH"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CDLHPM92VH');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -134,7 +143,7 @@
         <div class="container">
           <div class="row">
             <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
-              <img src="assets/img/optimocounts.jpg" alt="Window cleaning" class="img-fluid">
+              <img src="assets/img/optimocounts.jpg" alt="Window cleaning" class="img-fluid rounded-4 mb-4">
             </div>
             <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="150">
               <div class="content d-flex flex-column justify-content-center">
