--- a/index.html
+++ b/index.html
@@ -341,6 +341,15 @@
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-lg-3 mx-auto mb-5">
+          <!-- Start of BICSC Digital Badge code -->
+          <div style="min-width:250px;min-height:120px;"><div style="position: relative;padding-bottom: 48%;height: auto;overflow: hidden;"><iframe frameborder="0" scrolling="no" allowTransparency="true" src="https://cdn.yoshki.com/iframe/55990r.html" style="border:none; margin:0px; padding:0px; backgroundColor:transparent; top:0px; left:0px; width:100%; height:100%; position: absolute;"></iframe></div></div>
+          <!-- End of BICSC Digital Badge code -->
+        </div>
+      </div>
+    </div>
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
@@ -355,7 +364,7 @@
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
         </div>
         <div class="webdesign">
-          <p>Website Design & Build by &nbsp; <a href="https://www.codepractor.com" target="_blank"><img src="assets/img/codepractorlogo.png" class="codepractor" alt="Codepractor Logo" style="width: 200px;"></a></p>
+          
         </div>
       </div>
     </footer>
