--- a/optimo-maintenance-cardiff.html
+++ b/optimo-maintenance-cardiff.html
@@ -374,6 +374,7 @@
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
         </div>
         <div class="webdesign">
+          <a href="optimo-privacy-policy.html" target="_blank">Privacy Policy</a>
         </div>
       </div>
     </footer>
