Feat!: form fix and thank you page

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               </div>
             </div>
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form name="insightly_web_to_lead" action="https://crm.na1.insightly.com/WebToLead/Create" method="post" class="php-email-form"><input type="hidden" name="formId" value="KLelwIggwBtPqKo04ewsgA==" />
+              <form name="insightly_web_to_lead" action="https://crm.na1.insightly.com/WebToLead/Create" method="post" class="email-form"><input type="hidden" name="formId" value="KLelwIggwBtPqKo04ewsgA==" />
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="insightly_firstName">First Name: </label>
